--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,55 @@
+@font-face {
+    font-family: "SuisseIntl";
+    src: url(../fonts/SuisseIntl-Regular-WebTrial.ttf) format('truetype');
+    font-weight: regular;
+}
+
+@font-face {
+    font-family: "SuisseIntl";
+    src: url(../fonts/SuisseIntl-Medium-WebTrial.ttf) format('truetype');
+    font-weight: medium;
+}
+
+@font-face {
+    font-family: "SuisseIntl";
+    src: url(../fonts/SuisseIntl-Bold-WebTrial.ttf) format('truetype');
+    font-weight: bold;
+}
+ 
 * {
-    font-family: Helvetica;
+    font-family: "SuisseIntl", "Times New Roman", serif;
     background-color: rgb(222, 0, 230);
     /* overflow: hidden; */
 }
 
-.header{
+
+p {
+    font-family: "SuisseIntl", "Times New Roman", serif;
+    font-weight: regular;
+}
+
+h1 {
+    font-family: "SuisseIntl", "Helvetica", serif;
+    font-weight: bold;
+    font-size: 140px;
+}
+
+h2 {
+    font-family: "SuisseIntl", "Times New Roman", serif;
+    font-weight: bold;
+    font-size: 100px;
+    color: rgb(254, 235, 93);
+    -webkit-text-stroke: 3px black;
+}
+
+.header {
     width:100vw;
-    height: 200px;
+    height: 1200px;
     border: 10px solid yellow;
+    /* font-size: xx-large; */
+    display: flex;
+    align-items: center;
+    justify-content: center; 
 }
 .two-up {
     display: flex;
@@ -22,7 +64,7 @@
   }
   
 .column {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     /* width: 500px;
     height: 500px; */
     display: flex;
@@ -30,8 +72,8 @@
     flex-basis: 100%;
     flex: 1;
     height: 100vh;
-    -ms-overflow-style: none; 
-    scrollbar-width: none;  
+    /* -ms-overflow-style: none; 
+    scrollbar-width: none;   */
     
 }
 
@@ -40,6 +82,11 @@
     background-color: rgb(193, 222, 114);
     width: 50vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    flex-direction: row-reverse;
+    /* margin-left: auto; */
 }
 
 .right {
@@ -47,4 +94,94 @@
     background-color: aliceblue;
     width: 50vw;
     height: 100vh;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+}
+
+.grid-tool {
+    width: 400px;
+    height: 800px;
+    /* position: absolute;
+    right: 0; */
+    /* grid-template: repeat(10, 1fr) / repeat(20, 1fr); */
+    
+}
+
+.box{
+    border: 5px solid rgb(255, 157, 0);
+}
+
+.grid {
+    width: 100%;
+    height: 100%;
+    /* background-color: rgb(222, 211, 172); */
+    display: grid;
+    grid-template: repeat(20, 1fr) / repeat(10, 1fr);
+    /* align-items: center;
+    justify-content: center; */
+  }
+
+.square {
+    border: 1px solid yellow;
+    background: aqua;
+}
+
+.canvas {
+    width: 400px;
+    height: 800px;
+    background: black;
+}
+
+.exhibition {
+    /* height:1200px; */
+    background-color: cornflowerblue;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    /* flex-direction: column; */
+}
+
+#exhibit-statement-title {
+    margin-top: 6em;
+    background-color: rgb(26, 255, 0);
+    /* align-items: center; */
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+#exhibit-statement {
+    justify-content: center;
+    /* width:100%; */
+    margin-left: 50%;
+    margin-right: 15%;
+    margin-top: 3em;
+    background-color: rgb(255, 0, 0);
+    line-height: 1.3em;
+}
+
+
+.artist-text {
+    margin-top: 3em;
+}
+.contributing-artists {
+    height: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    border: 5px dotted rosybrown;
+    /* align-items: center; */
+    justify-content: center;
+    margin-top: 200px;
+    color: aliceblue;
+    background-color: rgb(255, 46, 172);
+}
+
+.names {
+    column-count: 6;
+    padding-left: 3px;
+    line-height: 1.3em;
+    color: aliceblue;
 }
