--- a/01_Together/css/styles.css
+++ b/01_Together/css/styles.css
@@ -53,10 +53,35 @@ h2 {
 }
 
 
-.buttonbar {
+#buttonbar {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#button-container {
+    width: 100px;
+    /* height: 100px; */
+    /* background-color: chartreuse; */
+    justify-content: center;
+    align-content: center;
+    justify-content: space-between;
+    padding: auto;
+}
+
+#printbutt {
+    padding: 10px;
+    border: none;
+    outline: none;
+    background: none;
+}
+
+#savebutt {
+    padding: 10px;
+    padding-left: 50px;
+    border: none;
+    outline: none;
+    background: none;
 }
 
 .sketchdiv {
@@ -144,15 +169,7 @@ h2 {
     
 }
 
-.grid {
-    width: 100%;
-    height: 100%;
-    /* background-color: rgb(222, 211, 172); */
-    display: grid;
-    grid-template: repeat(20, 1fr) / repeat(10, 1fr);
-    /* align-items: center;
-    justify-content: center; */
-  }
+
 
 .square {
     border: 1px solid yellow;
@@ -162,16 +179,6 @@ h2 {
     background:rgb(255, 0, 0);
 }
 
-.square img {
-    width: 100%;
-    height: 100%;
-}
-
-.canvas {
-    width: 400px;
-    height: 800px;
-    background: rgb(209, 182, 182);
-}
 
 .exhibition {
     /* height:1200px; */
